# lab_MRRS_webots_state_machines

./: .gitignore  readme.md
docker/: .bashrc  attach_docker  attach_root  build_docker  create_user  load_image  pull_docker  run_container  save_image  start_docker  stop_docker
docker/dockerfile/: Dockerfile
ws/src/lidars_localization/: README.md  package.xml  setup.cfg  setup.py
ws/src/lidars_localization/launch/: lidars_manager.launch.py  main.launch.py  slam_launch.py  tf_launch.py
ws/src/lidars_localization/lidars_localization/: get_lidars_ports.py  laser_scan_merger.py
ws/src/my_youbot/: package.xml  setup.py
ws/src/my_youbot/launch/: robot_launch1.py
ws/src/my_youbot/my_youbot/: camera_node.py  control_motor.py  get_xyz.py  multi_robot_smach.py  multi_robot_smach_old.py  my_robot_driver.py  point_to_point_controller.py  point_to_point_controller_old.py  robot_state_publisher.py  smach.py  temp_multi_robot_smach.py
ws/src/my_youbot/resource/: my_robot.urdf  my_robot_gps_imu.urdf
ws/src/my_youbot/worlds/: .my_world_new.wbproj  .three_robots_world.wbproj  .three_robots_world2.wbproj  .three_robots_world_GPS_IMU.wbproj  .three_robots_world_GPS_IMU_wider_walls.wbproj  my_world_new.wbt  three_robots_world.wbt  three_robots_world2.wbt  three_robots_world_GPS_IMU.wbt  three_robots_world_GPS_IMU_wider_walls.wbt
ws/src/my_youbot_interfaces/: CMakeLists.txt  package.xml
ws/src/my_youbot_interfaces/action/: MoveToPose.action
ws/src/smach_demo/: package.xml  setup.py
ws/src/smach_demo/smach_demo/: my_petri_net_demo.py  simple_smach.py
(+3 files in other folders)
